# CircuitPython_LILYGO_T-Deck

./: LICENSE  README.md  README.rst  README.rst.license  lilygo_tdeck.py  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst  pins.rst  pins.rst.license
examples/: lilygo_tdeck_custom_keyboard.py  lilygo_tdeck_example.py  lilygo_tdeck_simpletest.py  lilygo_tdeck_trackball.py
