# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Robert Grizzell
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-lilygo-t-deck"
description = "CircuitPython drivers for the LILYGO T-Deck peripherals."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Robert Grizzell", email = "robert@grizzell.me"}
]
urls = {Homepage = "https://github.com/rgrizzell/CircuitPython_LILYGO_T-Deck"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "lilygo-tdeck",
    "lilygo",
    "t-deck",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["lilygo_tdeck"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
